# behaviac

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  history.txt  license.txt  version.txt
test/btremotetest/: BTPlayer.cpp  BTPlayer.h  CMakeLists.txt  remote_test.cpp
test/btremotetest/workspace/: btremotetest.workspace.xml
test/btremotetest/workspace/exported/: demo_running.xml
test/btunittest/: BehaviacWorkspace.h  CMakeLists.txt  behaviacsystem.cpp  behaviortest.h  btloadtestsuite.h  main.cpp  test.h
test/btunittest/Agent/: AgentArrayAccessTest.cpp  AgentArrayAccessTest.h  AgentNodeTest.cpp  AgentNodeTest.h  CustomPropertyAgent.cpp  CustomPropertyAgent.h  EmployeeParTestAgent.cpp  EmployeeParTestAgent.h  FSMAgentTest.cpp  FSMAgentTest.h  HTNAgentHouse.cpp  HTNAgentHouse.h  HTNAgentHouseBase.cpp  HTNAgentHouseBase.h  HTNAgentTravel.cpp  HTNAgentTravel.h  ParTestAgent.cpp  ParTestAgent.h  ParTestAgentBase.cpp  ParTestAgentBase.h  ParTestRegNameAgent.cpp  ParTestRegNameAgent.h  PreconEffectorAgent.cpp  PreconEffectorAgent.h  PreconEffectorTest.cpp  PreconEffectorTest.h  PropertyReadonlyAgent.cpp  PropertyReadonlyAgent.h  UnitTestTypes.cpp  UnitTestTypes.h
test/btunittest/ArrayAccessTest/: ArrayAccessTest.cpp
test/btunittest/BehaviacData/: BehaviacUnitTestCpp.workspace.xml
test/btunittest/BehaviacData/exported/meta/: BehaviacUnitTestCpp.meta.bson.bytes  BehaviacUnitTestCpp.meta.xml
test/btunittest/BehaviacData/exported/node_test/: action_child_agent_0.bson.bytes  action_child_agent_0.xml  action_ut_0.bson.bytes  action_ut_1.bson.bytes  action_ut_1.xml  action_ut_2.bson.bytes  action_ut_2.xml  action_ut_3.xml  action_ut_waitforsignal_0.bson.bytes  action_ut_waitforsignal_0.xml  action_ut_waitforsignal_2.xml  action_waitframes_ut_0.bson.bytes  condition_ut_0.bson.bytes  condition_ut_0.xml  condition_ut_1.bson.bytes  condition_ut_1.xml  condition_ut_3.bson.bytes  condition_ut_3.xml  decoration_alwaysfailure_ut_0.bson.bytes  decoration_alwaysfailure_ut_0.xml  decoration_alwaysrunning_ut_0.xml  decoration_countlimit_ut_0.xml  decoration_countlimit_ut_1.bson.bytes  decoration_countlimit_ut_1.xml  decoration_countlimit_ut_3.xml  decoration_failureuntil_ut_0.bson.bytes  decoration_failureuntil_ut_1.bson.bytes  decoration_failureuntil_ut_1.xml  decoration_frames_ut_0.bson.bytes  decoration_log_ut_0.xml  decoration_loop_ut_1.bson.bytes  decoration_loop_ut_1.xml  decoration_loopuntil_ut_0.bson.bytes  decoration_loopuntil_ut_0.xml  decoration_loopuntil_ut_2.bson.bytes  decoration_not_ut_1.bson.bytes  decoration_not_ut_2.xml  decoration_successuntil_ut_0.bson.bytes  decoration_successuntil_ut_0.xml  decoration_successuntil_ut_1.xml  (+92 more)
test/btunittest/BehaviacData/exported/node_test/PreconditionEffectorTest/: PreconditionEffectorTest_0.xml  PreconditionEffectorTest_2.xml  PreconditionEffectorTest_3.bson.bytes
test/btunittest/BehaviacData/exported/node_test/fsm/: action_ut_1_2.bson.bytes  action_ut_1_2.xml  bt_ref_fsm.bson.bytes  fsm_ref_bt_ut.bson.bytes  fsm_ref_bt_ut.xml  fsm_ref_fsm_ut.bson.bytes  fsm_ref_fsm_ut.xml  fsm_ut_0.bson.bytes  (+2 more)
test/btunittest/BehaviacData/exported/par_test/: cast_param.bson.bytes  cast_param.xml  custom_property_as_left_value_and_param.bson.bytes  custom_property_reset.xml  par_as_left_value_and_param.bson.bytes  par_as_left_value_and_param.xml  par_as_ref_param.bson.bytes  par_as_ref_param.xml  property_as_left_value.bson.bytes  property_as_left_value.xml  property_as_left_value_and_param.bson.bytes  property_as_left_value_and_param.xml  property_as_ref_param.bson.bytes  property_as_ref_param.xml  readonly_default.xml  register_name_as_left_value_and_param.xml  static_property_as_left_value_and_param.bson.bytes  static_property_as_left_value_and_param.xml  static_property_as_ref_param.bson.bytes  static_property_as_ref_param.xml  vector_test.bson.bytes  vector_test.xml
test/btunittest/BehaviacData/xmlmeta/: UnitTestCppMeta.xml
test/btunittest/FSMTest/: fsmunittest.cpp
test/btunittest/HTNTest/: htnhouseunittest.cpp  htntravelunittest.cpp
test/btunittest/Meta/: testtype.cpp
test/btunittest/NodeTest/: DecorationNodeUnitTest.cpp  EnterExitActionUnitTest.cpp  EventUnitTest.cpp  NodeUnitTest.cpp  ParallelNodeUnitTest.cpp  PredicateUnitTest.cpp  QueryUnitTest.cpp
test/btunittest/Others/: btloadtest.cpp  btmethodtest.cpp  btunittest.cpp  parallelnodetest.cpp  probabilityselectortest.cpp  selectorlooptest.cpp  selectorstochastictest.cpp  sequencestochastictest.cpp
test/btunittest/ParPropertyTest/: ParPropertyUnitTest.cpp  PropertyReadonlyUnitTest.cpp
test/btunittest/attachments/: PreconEffectorUintTest.cpp
test/btunittest/behaviac_generated/behaviors/: behaviac_generated_behaviors.cpp  behaviac_generated_behaviors_0.cpp  behaviac_generated_behaviors_0.h  behaviac_generated_behaviors_1.cpp  behaviac_generated_behaviors_1.h  behaviac_generated_behaviors_10.cpp  behaviac_generated_behaviors_10.h  behaviac_generated_behaviors_2.cpp  behaviac_generated_behaviors_2.h  behaviac_generated_behaviors_3.cpp  behaviac_generated_behaviors_3.h  behaviac_generated_behaviors_4.cpp  behaviac_generated_behaviors_4.h  behaviac_generated_behaviors_5.cpp  behaviac_generated_behaviors_5.h  behaviac_generated_behaviors_6.cpp  behaviac_generated_behaviors_6.h  behaviac_generated_behaviors_7.cpp  behaviac_generated_behaviors_7.h  behaviac_generated_behaviors_8.cpp  behaviac_generated_behaviors_8.h  behaviac_generated_behaviors_9.cpp  behaviac_generated_behaviors_9.h
test/btunittest/behaviac_generated/types/: behaviac_types.h
test/btunittest/behaviac_generated/types/internal/: behaviac_agent_member_visitor.h  behaviac_agent_meta.cpp  behaviac_agent_meta.h  behaviac_customized_types.cpp  behaviac_customized_types.h  behaviac_headers.h
test/btunittest/ext/: extendreftype.cpp  extendreftype.h  extendstruct.h  range.h
tutorials/tutorial_1/cpp/: CMakeLists.txt  tutorial_1.cpp
tutorials/tutorial_11/cpp/: CMakeLists.txt  tutorial_11.cpp
tutorials/tutorial_11/cpp/behaviac_generated/behaviors/: behaviac_generated_behaviors.cpp  behaviac_generated_behaviors.h
(+1832 files in other folders)
